<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".fragment.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/ic_sign_up_rafiki" />

            <com.example.brainbuster.customfont.CustomTextViewBold
                style="@style/black_26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:letterSpacing="0.05"
                android:text="@string/become_a_member"
                android:textColor="@color/yellowPrimary1" />

            <com.example.brainbuster.customfont.CustomTextViewMedium
                style="@style/black_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:includeFontPadding="false"
                android:text="@string/your_name"
                android:textColor="#D76C757D" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/semi_rounded_corner"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp">

                <com.example.brainbuster.customfont.CustomEdittext
                    android:id="@+id/edt_signupName"
                    style="@style/black_10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="0.80"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="John Martin"
                    android:inputType="textPersonName"
                    android:paddingVertical="@dimen/_8sdp" />

                <ImageView
                    android:id="@+id/iv_userviolet"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingVertical="@dimen/_6sdp"
                    android:src="@drawable/user_violet" />
            </LinearLayout>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_usernameValidation"
                style="@style/black_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:text="please enter valid name to continue"
                android:textColor="@color/red1"
                android:visibility="gone" />

            <com.example.brainbuster.customfont.CustomTextViewMedium
                style="@style/black_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/email_address"
                android:textColor="#D76C757D" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/semi_rounded_corner"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp">

                <com.example.brainbuster.customfont.CustomEdittext
                    android:id="@+id/edt_signupEmail"
                    style="@style/black_10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="0.80"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="john@gmail.com"
                    android:inputType="textPersonName"
                    android:paddingVertical="@dimen/_8sdp" />

                <ImageView
                    android:id="@+id/iv_emailviolet"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:paddingVertical="@dimen/_6sdp"
                    android:src="@drawable/email_violet" />
            </LinearLayout>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_emailValidation"
                style="@style/black_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:text="please enter valid email to continue"
                android:textColor="@color/red1"
                android:visibility="gone" />

            <com.example.brainbuster.customfont.CustomTextViewMedium
                style="@style/black_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/password"
                android:textColor="#D76C757D" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/semi_rounded_corner"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp">

                <com.example.brainbuster.customfont.CustomEdittext
                    android:id="@+id/edt_signupPassword"
                    style="@style/black_10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="0.80"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="john1123"
                    android:inputType="textPersonName"
                    android:paddingVertical="@dimen/_8sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_23sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_seenviolet"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/seen" />

                    <ImageView
                        android:id="@+id/iv_unseenviolet"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/unseen"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_passwordLengthValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:textColor="@color/red1"
                style="@style/black_8"
                android:text="@string/password_must_have_atleast_8_characters"
                android:visibility="gone"/>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_passwordUppercaseValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:textColor="@color/red1"
                style="@style/black_8"
                android:text="@string/password_must_contain_atleast_one_uppercase_letter"
                android:visibility="gone"/>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_passwordLowercaseValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:textColor="@color/red1"
                style="@style/black_8"
                android:text="@string/password_must_contain_atleast_one_lowercase_letter"
                android:visibility="gone"/>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_passwordDigitValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:textColor="@color/red1"
                style="@style/black_8"
                android:text="@string/password_must_contain_atleast_one_digit"
                android:visibility="gone"/>

            <com.example.brainbuster.customfont.CustomTextViewMedium
                android:id="@+id/tv_passwordSymbolValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:textColor="@color/red1"
                style="@style/black_8"
                android:text="@string/password_must_contain_a_symbol"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <View
                    android:id="@+id/view_start"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.40"
                    android:background="@color/gray_light_dark" />

                <com.example.brainbuster.customfont.CustomTextViewMedium
                    android:id="@+id/tv_or"
                    style="@style/black_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.20"
                    android:gravity="center_horizontal|center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/or" />

                <View
                    android:id="@+id/view_end"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.40"
                    android:background="@color/gray_light_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_signupGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/semi_rounded_corner">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/google" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/full_semi_rounded_corner"
                android:paddingVertical="@dimen/_8sdp">

                <com.example.brainbuster.customfont.CustomTextViewSemiBold
                    style="@style/white_16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up_u2192" />

            </LinearLayout>

            <com.example.brainbuster.customfont.CustomTextView
                style="@style/gray_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:text="@string/by_registering_you_are_agreeing_to_our_terms_of_use_and_privacy_policy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center">

                <com.example.brainbuster.customfont.CustomTextView
                    style="@style/black_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/already_have_an_account" />

                <com.example.brainbuster.customfont.CustomTextViewMedium
                    android:id="@+id/tv_GoToLogin"
                    style="@style/black_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="@dimen/_3sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:text="@string/login"
                    android:textColor="@color/violetPrimary1" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>