<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:paddingHorizontal="@dimen/_12sdp"
    tools:context=".fragment.TourOneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/ic_thesis_rafiki" />

        <com.example.brainbuster.customfont.CustomTextViewBold
            style="@style/black_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.05"
            android:text="@string/gain_knowledge_from_anywhere"
            android:textColor="@color/violetPrimary1" />

        <com.example.brainbuster.customfont.CustomTextViewMedium
            style="@style/black_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.03"
            android:text="@string/answer_questions_and_gain_knowledge_by_playing" />

        <LinearLayout
            android:id="@+id/lv_next"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/circle_next_btn"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/next_arrow_white" />

        </LinearLayout>

        <com.example.brainbuster.customfont.CustomTextViewSemiBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_play"
            style="@style/black_16"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/violetPrimary1"
            android:includeFontPadding="false"/>

    </LinearLayout>

</RelativeLayout>